name: yesod-session-redis
version: 0.2.3
license: BSD3
license-file: LICENSE
author: Oliver Hunt
maintainer: Oliver Hunt
description: Redis-Powered Sessions for Haskell
synopsis: Redis-Powered Sessions for Haskell
category: Database
stability: experimental
cabal-version: >= 1.6
build-type: Simple
homepage: https://github.com/ollieh/yesod-session-redis
source-repository head
  type: git
  location: https://ollieh@github.com/ollieh/yesod-session-redis.git

library
  build-depends: base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
               , binary
               , bytestring
               , containers
               , cookie
               , hedis >= 0.9
               , mtl
               , network
               , random
               , text
               , time
               , wai
               , yesod-core >= 1
  exposed-modules: Web.RedisSession
                 , Yesod.Session.Redis
  ghc-options: -Wall -fwarn-tabs -O2
